Proyecto2/Ymls/consumer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  namespace: proyect
spec:
  replicas: 2
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: vernik22/consumer
        resources:
          limits:
            cpu: "0.4"
            memory: "700Mi"
