Proyecto2/Ymls/grpc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-producer
  namespace: proyect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-producer
  template:
    metadata:
      labels:
        app: grpc-producer
    spec:
      containers:
      - name: grpc-client
        image: vernik22/clientgrpc
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "0.4"
            memory: "500Mi"
      - name: grpc-server
        image: vernik22/servergrpc
        ports:
        - containerPort: 3001
        resources:
          limits:
            cpu: "0.4"
            memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-client-service
  namespace: proyect
spec:
  selector:
    app: grpc-producer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
